# github-repos-collector

./: .editorconfig  .flake8  .gitignore  COMANDOS_UTEIS.md  CONTRIBUTING.md  GITHUB_READY.md  LICENSE  MANIFEST.in  MELHORIAS_COMPLETAS.md  README.md  SECURITY.md  app.py  iniciar.bat  instalar.bat  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
docs/: APRESENTACAO.md  AUTHENTICATION.md  CHANGELOG.md  COMECE_AQUI.md  EXEMPLOS.md  GUIA_RAPIDO.md  INDEX.md  INSTALLATION.md  LEIA-ME-PRIMEIRO.txt  MELHORIAS_GITHUB.md  PROGRESS_BAR.md  PROJETO_CONCLUIDO.md  README.md  RESUMO_EXECUTIVO.md  RESUMO_MELHORIAS.md  ROADMAP.md  TESTE_RAPIDO.md  TESTING.md
tests/: test_app.py
